can now load to and from mongo, need to link plotting logic to mongo next

--- a/config/config.yml
+++ b/config/config.yml
@@ -1,5 +1,6 @@
+JSON_SORT_KEYS: false
 URLs:
   githubRawRootURL: https://raw.githubusercontent.com
   githubCovid19RepoURL: https://github.com/CSSEGISandData/COVID-19/tree/master/csse_covid_19_data/csse_covid_19_daily_reports
 directories:
-  currentDatesFile: ../COVID-19-data/current_filenames.txt
+  currentDatesFile: webapp/COVID-19-data/current_filenames.txt
